Trying to get the bib perfect. Inline refs are still Name (year), not (name, year)

--- a/bib/ref.bib
+++ b/bib/ref.bib
@@ -1,16 +1,17 @@
-@misc{advancer,
-  author = "{Advancer Technologies}",
-  title = "MyoWare Muscle Sensor Datasheet",
-  year = 2015,
-  howpublished = {\url{https://cdn.sparkfun.com/datasheets/Sensors/Biometric/MyowareUserManualAT-04-001.pdf}}
+@online{advancer2015,
+  author  = {{Advancer Technologies}},
+  year    = {2015},
+  title   = {Myoware Muscle Sensor Datasheet},
+  urldate = {2018-01-09},
+  url     = {https://www.cdn.sparkfun.com/datasheets/Sensors/Biometric/MyowareUserManualAT-04-001.pdf},
 }
 
-@misc{arduino,
-  author = "{Arduino Foundation}",
-  title = "Introduction",
-  year = 2017,
-  note = {Binnengehaald op 20 september 2017 van},
-  howpublished = {\url{https://www.arduino.cc/en/Guide/Introduction}}
+@online{arduino2017,
+  author  = {{Arduino Foundation}},
+  year    = {2017},
+  title   = {Introduction},
+  urldate = {2017-09-20},
+  url     = {https://arduino.cc/en/Guide/Introduction}
 }
 
 @article{alpenfels1955,
@@ -23,8 +24,190 @@
   year = {1955}
 }
 
-@misc{anatomievandehand,
-  title= "Anatomie van de hand",
-  note="Binnengehaald 4 september 2017"
+@online{anatomie,
+  title   = {Anatomie van de hand},
+  urldate = {2017-09-04},
+  url     = {https://www.hierhebikpijn.nl/anatomie/hand}
+}
 
+@online{armprothese,
+  title   = {Armprothese},
+  urldate = {2017-09-12},
+  url     = {https://nl.wikipedia.org/wiki/Armprothese}
+}
+
+@online{chilson2013,
+  author  = {Chilson, {L}},
+  year    = {2013},
+  title   = {{T}he {D}ifference {B}etween {ABS} and {PLA} for 3{D} {P}rinting},
+  urldate = {2017-09-18},
+  url     = {https://www.protoparadigm.com/news-updates/the-difference-between-abs-and-pla-for-3d-printing/}
+}
+
+@online{borstprothese,
+  author  = {Danhof, {N}},
+  title   = {Borstprothese},
+  urldate = {2017-09-11},
+  url     = {http://www.rosesbodycare.nl/borstprothese.htm}
+}
+
+@online{justo2015,
+  author  = {Di {J}usto, {P}},
+  year    = {2015},
+  title   = {Raspberry Pi or Arduino Uno? One Simple Rule to Choose the Right Board},
+  urldate = {2017-09-20},
+  url     = {https://makezine.com/2015/12/04/admittedly-simplistic-guide-raspberry-pi-vs-arduino/}
+}
+
+@online{duann2012,
+  author  = {Duann},
+  year    = {2012},
+  title   = {Design for 3D Printing 101: Intro to Design for 3D Printing},
+  urldate = {2017-09-20},
+  url     = {https://www.shapeways.com/blog/archives/1678-design-for-3d-printing-101-intro-to-design-for-3d-printing.html}
+}
+
+@online{fatsi2015,
+  author  = {Fatsi, {E}},
+  year    = {2015},
+  title   = {Arduino Development in Atom Editor},
+  urldate = {2017-06-12},
+  url     = {https://www.viget.com/articles/arduino-development-in-atom-editor}
+}
+
+@online{feenstra,
+  author  = {Feenstra, {M} and Woods, {C}},
+  title   = {Van amputatie tot prothese},
+  urldate = {2018-01-09},
+  url     = {https://richtlijnendatabase.nl/gerelateerde_documenten/f/2876/Patientenversie%20Amputatie%20tot%20Prothese.pdf}
+}
+
+@online{guldensnede,
+  title   = {Gulden snede},
+  urldate = {2017-05-07},
+  url     = {https://nl.wikipedia.org/w/index.php?title=Gulden_snede&oldid=48684258}
+}
+
+@online{henry2014,
+  author  = {Henry, {A}},
+  year    = {2014},
+  title   = {Five best text editors},
+  urldate = {2017-09-20},
+  url     = {https://lifehacker.com/five-best-text-editors-1564907215}
+}
+
+@online{implantaat,
+  title   = {Implantaat},
+  urldate = {2017-09-11},
+  url     = {https://nl.wikipedia.org/wiki/Implantaat}
+}
+
+@online{kravets2017,
+  author  = {Kravets, {I}},
+  year    = {2017},
+  title   = {PlatformIO IDE for Atom},
+  urldate = {2017-09-20},
+  url     = {https://github.com/platformio/platformio-atom-ide}
+}
+
+@online{mihalko2017,
+  author  = {Mihalko, {A}},
+  year    = {2017},
+  title   = {ch340g-ch34g-ch34x-mac-os-x-driver},
+  urldate = {2017-10-06},
+  url     = {https://github.com/adrianmihalko/ch340g-ch34g-ch34x-mac-os-x-driver/blob/master/README.md}
+}
+
+@online{modmypi2013,
+  author  = {ModMyPi},
+  year    = {2013},
+  title   = {What's the difference between DC, Servo & Stepper motors?},
+  urldate = {2017-12-29},
+  url     = {https://www.modmypi.com/blog/whats-the-difference-between-dc-servo-stepper-motors}
+}
+
+@online{mortele2009,
+  author  = {Mortel\'{e}, Dr. {H}},
+  year    = {2009},
+  title   = {Anatomie van de hand},
+  urldate = {2017-09-11},
+  url     = {http://mortele.info/patienteninfo/hand/anatomie.asp}
+}
+
+@mastersthesis{murali2012,
+  author  = {Murali, {S}},
+  year    = {2012},
+  title   = {Golden ratio in human anatomy},
+  school  = {Government College Chittur},
+  doi     = {10.13140/2.1.2265.9526}
+}
+
+@online{natuurinformatie,
+  title   = {Natuurinformatie - Hand},
+  urldate = {2017-09-04},
+  url     = {http://www.natuurinformatie.nl/nnm.dossiers/natuurdatabase.nl/i003843.html}
+}
+
+@online{oosterbos,
+  author  = {Oosterbos, {K} and Koot, {H}},
+  title   = {Anatomie van pols en hand},
+  urldate = {2017-09-04},
+  url     = {http://orthopedie-grooteindhoven.nl/anatomie-van-pols-en-hand}
+}
+
+@book{osborn1999,
+  author  = {Osborne, {H}},
+  year    = {1999},
+  title   = {The Oxford companion to art},
+  edition = {First},
+  publisher = {Oxford: The Clarendon Press}
+}
+
+@online{prothesewiki,
+  title   = {Prothese},
+  urldate = {2017-09-11},
+  url     = {https://nl.wikipedia.org/wiki/Prothese}
+}
+
+@online{raspbian,
+  author  = {Raspbian},
+  title   = {Welcome to Raspbian},
+  urldate = {2017-09-20},
+  url     = {https://www.raspbian.org}
+}
+
+@book{weir2014,
+  author  = {Weir, Richard {F} and Sensinger, {J} {W}},
+  year    = {2004},
+  title   = {Design of artificial arms and hands for prosthetic applications},
+  journal = {Standard handbook of biomedical engineering and design},
+  publisher={New York: McGraw-Hill},
+}
+
+@online{taylor1999,
+  author  = {Taylor, {T}},
+  year    = {1999},
+  title   = {Muscles of the arm and hand},
+  urldate = {2018-01-08},
+  url     = {https://innerbody.com/anatomy/muscular/arm-hand}
+}
+
+@online{fibonacci,
+  title   = {Rij van Fibonacci},
+  urldate = {2017-09-12},
+  url     = {https://nl.wikipedia.org/wiki/Rij_van_Fibonacci}
+}
+
+@online{unix,
+  title   = {Unix},
+  urldate = {2017-09-25},
+  url     = {https://nl.wikipedia.org/w/index.php?title=Unix&oldid=49691124}
+}
+
+@book{vervloesem2017,
+  author  = {Vervloesem, {K} and Overman, {M}},
+  year    = {2017},
+  title   = {Arduino voor iedereen},
+  volume  = {5},
+  publisher = {Haarlem: Reshift Digital}
 }
