--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ bijlage pas na referenties
 nogmaals doorlezen op fouten
 V voetnoten (goed op letten)
 V voorblad toevoegen (opnieuw designen?)
+img hernoemen
